--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,30 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <script crossorigin src="..."></script>
+  
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script defer src="/your-path-to-fontawesome/js/brands.js"></script>
     <script defer src="/your-path-to-fontawesome/js/solid.js"></script>
     <script defer src="/your-path-to-fontawesome/js/fontawesome.js"></script>
+
+    <script src="/node_modules/@lottiefiles/lottie-player/dist/lottie-player.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@0.2.0/dist/lottie-player.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@0.2.0/dist/tgs-player.js"></script>
+    <script src="/node_modules/@lottiefiles/lottie-player/dist/tgs-player.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.14/lottie.min.js" integrity="sha512-G1R66RZMhyLDEcAu92/Kv4sWNypnEiJcM6yhe0PNyiYDaMAKpMrJ6ZLR67xC/RMNGRa8Pm9TxtO8a98F6Ct+Gw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.14/lottie_canvas.min.js" integrity="sha512-cs9FIUDgfsFZjWoLmwZi1UnrD27+hraW3b0ooaU13iq+NyK9SY/0bXS/ab7vYLSEd6z6r96Rn2OSMGrBF3Ewgw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.14/lottie_canvas.min.js" integrity="sha512-cs9FIUDgfsFZjWoLmwZi1UnrD27+hraW3b0ooaU13iq+NyK9SY/0bXS/ab7vYLSEd6z6r96Rn2OSMGrBF3Ewgw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.14/lottie_html.min.js" integrity="sha512-Z6U3MAl1f28MdhuHZa2k3Bfq2hYtdMwcwdcGmAaW3yDH0np8KJINJS97UzZaiGmZpqa0pkMySP/PDT49GJB9YA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.14/lottie_light.min.js" integrity="sha512-oquI7otdlqWnBjPa+cwKQo10s3Bsle+P3zqFgwrfR+DFNKXdv6zYKcqvy/U923mampnzlw1nimkURrvftrQmSA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.14/lottie_light_canvas.min.js" integrity="sha512-JbXWsrRares138MBPYpW0RPTS4VxBEeIYqkGjLK2K2Gq/2TcOEpuklqYyLvhxUr65+RYELb1R3iDQwQFf7QrOQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.14/lottie_light_canvas.min.js" integrity="sha512-JbXWsrRares138MBPYpW0RPTS4VxBEeIYqkGjLK2K2Gq/2TcOEpuklqYyLvhxUr65+RYELb1R3iDQwQFf7QrOQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.14/lottie_light_html.min.js" integrity="sha512-w+aDR2dcExPN+ZzG2E1NyzL/fWS0PrmcRWx8kBBlvU3nzjpsHvyPUQ4A38nhXllwMM44YWoAbIkBGFgiGtentA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.14/lottie_light_html.min.js" integrity="sha512-w+aDR2dcExPN+ZzG2E1NyzL/fWS0PrmcRWx8kBBlvU3nzjpsHvyPUQ4A38nhXllwMM44YWoAbIkBGFgiGtentA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.14/lottie_svg.min.js" integrity="sha512-STxU+mJf3ZBf/NoEi+/xzNq34aF8pCS7TMKa5TpXJGKjZxcQgosr314GjIgAVzy2wnldI8Bo/N1fiJtdp+z3IA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="js/lottie.js" type="text/javascript"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,700;0,900;1,100&display=swap" rel="stylesheet">
