--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,13 @@
     <script defer src="/your-path-to-fontawesome/js/solid.js"></script>
     <script defer src="/your-path-to-fontawesome/js/fontawesome.js"></script>
 
-    <script src="/node_modules/@lottiefiles/lottie-player/dist/lottie-player.js"></script>
+    <!-- <script src="/node_modules/@lottiefiles/lottie-player/dist/lottie-player.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@0.2.0/dist/lottie-player.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@0.2.0/dist/tgs-player.js"></script>
+    <script src="/node_modules/@lottiefiles/lottie-player/dist/tgs-player.js"></script> -->
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@0.4.0/dist/lottie-player.js"></script>
+    <script src="/node_modules/@lottiefiles/lottie-player/dist/lottie-player.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@0.4.0/dist/tgs-player.js"></script>
     <script src="/node_modules/@lottiefiles/lottie-player/dist/tgs-player.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.14/lottie.min.js" integrity="sha512-G1R66RZMhyLDEcAu92/Kv4sWNypnEiJcM6yhe0PNyiYDaMAKpMrJ6ZLR67xC/RMNGRa8Pm9TxtO8a98F6Ct+Gw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
